# logfortress

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
docs/: cli.md  index.md  installation.md
logfortress/: docker_guards.py  docker_link.py  docker_logs_manager.py  docker_network_manager.py  log_persistence.py  web_server.py
logfortress/static/: nav.css  styles.css
logfortress/templates/: list_sources.html  network_map.html  view_logs.html
logfortress/ui/: utils.py
