[project]
name = "logfortress"
version = "0.1.0"
description = "A simple debugging tool for Docker containers"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "docker>=6.1.3",
    "flask>=2.2.5",
    "texttable>=1.7.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.2.7",
]
